MDEV-15969 System versioning and FEDERATED don't work well together: DML and discovery fail

* fixed discovery
* DELETE fix
* federated.test

Closes tempesta-tech/mariadb#490